# utils-rs

./: .gitignore  Cargo.toml  README.md
any-client/: Cargo.toml
any-client/src/: config.rs  main.rs
any-client/src/client/: mod.rs
any-client/src/client/grpc_client/: convert_descriptors.rs
any-client/src/client/http_client/: mod.rs
any-client/src/client/websocket_client/: config.rs  item.rs  mod.rs
auth-utils/: Cargo.toml
auth-utils/src/: lib.rs
http-client/: Cargo.toml
http-client/src/: config.rs  main.rs
http-client/src/config/: request_method.rs
logger/: Cargo.toml
logger/src/: lib.rs
pretty-json/: Cargo.toml
pretty-json/src/: formatter.rs  lib.rs
src/: logger.rs  main.rs
websocket-client/: Cargo.toml
websocket-client/src/: item.rs  json.rs  main.rs
websocket-utils/: Cargo.toml
websocket-utils/src/: lib.rs
