[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "http_client"

[dependencies]
log = "0.4.17"
logger = { version = "0.1.0", path = "../logger" }
anyhow = "1.0.64"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
pretty-json = { version = "0.1.0", path = "../pretty-json" }
reqwest = "0.11.11"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"] }
