[package]
name = "websocket-utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "websocket_utils"

[dependencies]
log = "0.4.17"
anyhow = "1.0.63"
url = "2.2.2"
futures = "0.3.24"
tungstenite = { version = "0.17.3", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-native-roots"] }
serde_json = "1.0.85"
